kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: logging
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      volumes:
      - name: kibana-config-volume
        configMap:
          name: kibana
      containers:
      - name: kibana-logging
        image: kibana:6.5.4
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 2000m
            memory: 2Gi    
        volumeMounts:
        - name: kibana-config-volume
          mountPath: /usr/share/kibana/config
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
