kibana-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kibana-dashboard
  namespace: logging
spec:
  rules:
  - host: kibana.wyyy.com
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /
